--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -63,6 +63,6 @@ honcho==0.7             # task supervisor based on a Procfile
 html5lib==1.0b8         # for "cannot import viewkeys" runtime error.
 
 pendulum==1.1           # easy timezone, diffs, human info, etc
-raven                   # sentry
+raven==6.0              # sentry
 
 ruamel.yaml             # to remove the yaml.load unsafe warning (of third party libs).
