CI: upgrade pip, maybe fix stupid pip & request-cache 0.4 error
https://gitlab.com/vindarel/abelujo/-/jobs/230486364

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ cache:
     - make debian-nosudo
     # - virtualenv .
     # - source bin/activate
-    # - pip install -U pip
+    - pip install -U pip
     - make pip-nosudo
     # - make pip
     - make pip-dev
