run django-q with Honcho and a Procfile
for #158

--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -19,7 +19,6 @@ setuptools==39.2
 
 django==1.8
 django-bootstrap3==6.2.2
-django_q==0.9.4         # task queue
 pyjade                  # process jade templates.
 bootstrap-admin==0.3.6  # bootstrap theme, nice search feature.
 pyyaml
@@ -57,6 +56,9 @@ dateparser==0.5         # parser for human readable dates
 whitenoise==2.0         # serve static files. Easily, efficiently.
 gunicorn==19.4          # wsgi server
 
+# async task runner
+django_q==0.9.4         # task queue.
+honcho==0.7.0           # start django-q's cluster.
 
 # temporary fixes ?
 html5lib==1.0b8         # for "cannot import viewkeys" runtime error.
