tox: make tests pass on py27

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,13 @@
 # Tox: build virtualenv, run tests against multiple python versions.
 # https://testrun.org/tox/latest/
 [tox]
+# envlist = py27,py36
 envlist = py27
 # Don't build setup.py:
 skipsdist=True
 [testenv]
-deps= -r{toxinidir}/abelujo/requirements.txt
-commands=make test
+deps=
+    -r{toxinidir}/abelujo/requirements.txt
+    -r{toxinidir}/abelujo/requirements-dev.txt
+commands=
+    make unit
