--- a/abelujo/requirements.txt
+++ b/abelujo/requirements.txt
@@ -14,6 +14,9 @@
 # You should have received a copy of the GNU General Public License
 # along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 
+# bookshops dependencies.
+-e search/datasources/
+
 pip==9
 setuptools==39.2
 
@@ -24,6 +27,9 @@ bootstrap-admin==0.3.6  # bootstrap theme, nice search feature.
 pyyaml
 psycopg2                # postgresql database engine.
 pytz			# timezone
+
+# Python2/3
+six
 
 ### Django extensions
 djangorestframework==3.4 # REST framework. Serve API, serialize models, explore schema, etc
