tox: make tests pass on py36

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 # Tox: build virtualenv, run tests against multiple python versions.
 # https://testrun.org/tox/latest/
 [tox]
-# envlist = py27,py36
-envlist = py27
+envlist = py27,py36
 # Don't build setup.py:
 skipsdist=True
 [testenv]
