--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "angular-cookies": "1.3",
         "angular-datatables": "0.5",
         "angular-dynamic-locale": "0.1.32",
-        "angular-hotkeys": "chieffancypants/angular-hotkeys#1.7.0",
+        "angular-hotkeys": "1.7.0",
         "angular-i18n": "1.3",
         "angular-loading-bar": "0.8",
         "angular-mocks": "latest",
