--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-es2015": "^6.24.1",
         "bootstrap": "^3.3.7",
-        "bower": "^1.8.8",
         "c3": "latest",
         "datatables": "1.10",
         "gulp": "^3",
@@ -58,7 +57,6 @@
     },
     "private": true,
     "scripts": {
-        "postinstall": "bower install --allow-root",
-        "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+        "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
     }
 }
