WIP vendor JS builds
for #24

[ci skip]

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 documents/*.csv linguist-generated
 search/static/prelude-browser-min.js linguist-vendored
 search/static/date-fr-FR.js linguist-vendored
+search/static/js/build/ linguist-vendored
